[package]
name = "notifier"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
futures = "0.3.31"
lapin = "2.5.0"
lettre = "0.11.9"
lettre_email = "0.9.4"
teloxide = { version = "0.13", features = ["macros"] }
tokio = { version =  "1.8", features = ["full"]  }
tokio-amqp = "2.0.0"
